// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeError access_denied to invalid_user_password mapping domain is undefined should map access_denied error to invalid_user_password when error.code === access_denied 1`] = `
Object {
  "code": "invalid_user_password",
  "description": "foobar",
  "error": "invalid_user_password",
}
`;

exports[`normalizeError access_denied to invalid_user_password mapping domain is undefined should map access_denied error to invalid_user_password when error.error === access_denied 1`] = `
Object {
  "code": "invalid_user_password",
  "description": "foobar",
  "error": "invalid_user_password",
}
`;

exports[`normalizeError access_denied to invalid_user_password mapping is inside Universal Login Page should not map access_denied error to invalid_user_password when error.code === access_denied 1`] = `
Object {
  "description": "foobar",
  "error": "access_denied",
}
`;

exports[`normalizeError access_denied to invalid_user_password mapping is inside Universal Login Page should not map access_denied error to invalid_user_password when error.error === access_denied 1`] = `
Object {
  "description": "foobar",
  "error": "access_denied",
}
`;

exports[`normalizeError access_denied to invalid_user_password mapping is not inside Universal Login Page should map access_denied error to invalid_user_password when error.code === access_denied 1`] = `
Object {
  "code": "invalid_user_password",
  "description": "foobar",
  "error": "invalid_user_password",
}
`;

exports[`normalizeError access_denied to invalid_user_password mapping is not inside Universal Login Page should map access_denied error to invalid_user_password when error.error === access_denied 1`] = `
Object {
  "code": "invalid_user_password",
  "description": "foobar",
  "error": "invalid_user_password",
}
`;

exports[`webAuthOverrides should omit overrides that are not compatible with WebAuth 1`] = `
Object {
  "__jwks_uri": "https://jwks.com",
  "__tenant": "tenant1",
  "__token_issuer": "issuer1",
}
`;

exports[`webAuthOverrides should return overrides if any field is compatible with WebAuth 1`] = `
Object {
  "__jwks_uri": "https://jwks.com",
  "__tenant": "tenant1",
  "__token_issuer": "issuer1",
}
`;
